@startuml
class GetBookActivity {
    execute(GetBookRequest) : GetBookResponse
}
class GetPublishingStatusActivity
class RemoveBookFromCatalogActivity {
    execute(RemoveBookFromCatalogRequest) : RemoveBookFromCatalogResponse
}
class SubmitBookForPublishingActivity {
    execute(SubmitBookForPublishingRequest) : SubmitBookForPublishingResponse
}
class RecommendationsServiceClient
class CatalogDao {
    dynamoDbMapper : DynamoDBMapper
}
class PublishingStatusDao {
    dynamoDbMapper : DynamoDBMapper
}
class CatalogItemVersion {
    @DynamoDBHashKey bookId : String
    @DynamoDBRangeKey version : int
    inactive : boolean
    title : String
    author : String
    text : String
    genre : BookGenre
}
class PublishingStatusItem {
    @DynamoDBHashKey publishingRecordId : String
    @DynamoDBRangeKey status : PublishingRecordStatus
    statusMessage : String
    bookId : String
}
class BookNotFoundException
class PublishingStatusNotFoundException

CatalogItemVersion --> CatalogDao
PublishingStatusItem --> PublishingStatusDao
CatalogDao --> BookNotFoundException
GetBookActivity --> CatalogDao
GetBookActivity --> RecommendationsServiceClient
SubmitBookForPublishingActivity --> PublishingStatusDao



@enduml
